--- a/style.css
+++ b/style.css
@@ -520,3 +520,96 @@ body {
   left: 21px;
   border: 3px solid #fff;
 }
+
+.settings-menu {
+  background-color: #fff;
+  position: absolute;
+  width: 90%;
+  max-width: 350px;
+  height: 480px;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  border-radius: 8px;
+  padding-top: 16px;
+  top: 62px;
+  right: 1%;
+  overflow: hidden;
+}
+.settings-menu .setting-container {
+  padding: 10px;
+  width: 320px;
+  margin: 0 auto;
+  height: 100px;
+  background-color: #ffff;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  border-radius: 8px;
+}
+.setting-container img {
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
+  margin-bottom: 10px;
+}
+.flex {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  border-bottom: 1px solid #c5bfbf;
+}
+.flex a {
+  text-decoration: none;
+  color: #3a3737;
+  font-size: 1.2rem;
+  margin-bottom: 10px;
+}
+.see-all {
+  margin-top: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.see-all a {
+  text-decoration: none;
+  color: #0c6ac9;
+  font-size: 0.9rem;
+}
+.see-all p {
+  background-color: red;
+  color: #fff;
+  padding: 2px;
+  border-radius: 5px;
+  font-size: 0.9rem;
+}
+.setting-option {
+  padding: 15px;
+}
+.option-content {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 15px 0;
+}
+.option-child {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+.option-child i,
+.option-content i {
+  font-size: 25px;
+}
+.option-child i {
+  background: #e9e9e9;
+  padding: 8px;
+  border-radius: 30px;
+}
+.option-child a {
+  text-decoration: none;
+  color: #3a3737;
+  font-size: 1.1rem;
+}
+.setting-option p {
+  color: #5c5b5b;
+}
+.hidden {
+  visibility: hidden;
+}
